# chift-cli

./: .env.example  .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml  ruff.toml
.agents/skills/chift-cli-agent/: SKILL.md
.github/workflows/: lint.yml  release.yml  test.yml
skills/chift-cli/: SKILL.md
skills/chift-cli-agent/: SKILL.md
src/chift_cli/: __main__.py  auth.py  auth_form.py  cli.py  client.py  config.py  errors.py  output.py  pathing.py  schema.py
tests/: conftest.py  test_auth.py  test_cli_auth.py  test_cli_operations.py  test_client.py  test_config.py  test_schema.py
tests/fixtures/: openapi.json
