[project]
name = "chift-cli"
version = "0.1.0"
description = "OpenAPI-driven CLI for the Chift API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic-settings>=2.8.0",
  "prompt-toolkit>=3.0.48",
  "pyyaml>=6.0.2",
  "typer>=0.12.5",
]

[project.scripts]
chift = "chift_cli.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pyinstaller>=6.0",
  "ruff>=0.9.0,<0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
